@@ -2,6 +2,7 @@
     "type": "main",
     "stats": [
         {"name": "durability",      "value":  175},
+        {"name": "armor_durability","value":   11},
         {"name": "enchantability",  "value":    9},
         {"name": "harvest_level",   "value":    1},
         {"name": "harvest_speed",   "value":    4},
